added openapi-generate.ps1 and  script openapi:generate, updated api and services
